# todo_list_task

./: README.md  pyproject.toml  task_1.py  task_2.py
postman collection/: thunder-collection_postman_Todo list.json
src/: run.py
src/db/: connect.py  models.py
src/routes/: home.py  todo.py  users.py
